# azure-keyvault-secrets-sync-action

./: README.md  action.yml  keyvault.py  logging-conf.yaml  pyproject.toml  setup_logging.py
.github/: dependabot.yml
.github/workflows/: create-release.yml
